force-app/main/default/objects/Eligibility_Folder__c/Eligibility_Folder__c.object-meta.xml
<CustomObject>
    <label>Eligibility Folder</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>