force-app/main/default/objects/Eligibility_Folder__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Eligibility Folders</relationshipLabel>
    <relationshipName>Eligibility_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>