force-app/main/default/objects/Eligibility_Folder__c/fields/Folder_Type__c.field-meta.xml
<CustomField>
    <fullName>Folder_Type__c</fullName>
    <label>Folder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QualificationType</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Marksheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>