force-app/main/default/objects/Eligibility_Folder__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Eligibility Folders</relationshipLabel>
    <relationshipName>Eligibility_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>