force-app/main/default/objects/Eligibility_Folder__c/fields/Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>Eligibility_Folder__c</referenceTo>
    <relationshipLabel>Eligibility Folders</relationshipLabel>
    <relationshipName>Eligibility_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>