force-app/main/default/objects/Eligibility_Folder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Recheck</fullName>
            </value>
            <value>
                <fullName>All Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>