force-app/main/default/objects/Eligibility_Folder__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Eligibility_Folder_Template__c</referenceTo>
    <relationshipLabel>Eligibility Folders</relationshipLabel>
    <relationshipName>Eligibility_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>