force-app/main/default/objects/Eligibility_Folder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Degree_Title__c</columns>
    <columns>Folder_Type__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Lead__c</columns>
    <columns>Level__c</columns>
    <columns>Status__c</columns>
    <columns>Template__c</columns>
    <columns>Qualification_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>